force-app/main/default/objects/Account/fields/chargebeeapps__Payment_Method_Type__c.field-meta.xml
<CustomField>
    <fullName>chargebeeapps__Payment_Method_Type__c</fullName>
    <label>Payment Method Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>card</fullName>
                <label>CARD</label>
            </value>
            <value>
                <fullName>paypal_express_checkout</fullName>
                <label>PAYPAL_EXPRESS_CHECKOUT</label>
            </value>
            <value>
                <fullName>amazon_payments</fullName>
                <label>AMAZON_PAYMENTS</label>
            </value>
            <value>
                <fullName>direct_debit</fullName>
                <label>DIRECT_DEBIT</label>
            </value>
            <value>
                <fullName>generic</fullName>
                <label>GENERIC</label>
            </value>
            <value>
                <fullName>alipay</fullName>
                <label>ALIPAY</label>
            </value>
            <value>
                <fullName>unionpay</fullName>
                <label>UNIONPAY</label>
            </value>
            <value>
                <fullName>apple_pay</fullName>
                <label>APPLE_PAY</label>
            </value>
            <value>
                <fullName>wechat_pay</fullName>
                <label>WECHAT_PAY</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>