force-app/main/default/objects/Account/fields/chargebeeapps__Resource_Version__c.field-meta.xml
<CustomField>
    <fullName>chargebeeapps__Resource_Version__c</fullName>
    <label>Resource Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>