force-app/main/default/objects/Account/fields/chargebeeapps__Taxability__c.field-meta.xml
<CustomField>
    <fullName>chargebeeapps__Taxability__c</fullName>
    <label>Taxability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>taxable</fullName>
                <label>TAXABLE</label>
            </value>
            <value>
                <fullName>exempt</fullName>
                <label>EXEMPT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>