force-app/main/default/objects/Account/fields/chargebeeapps__VAT_Number__c.field-meta.xml
<CustomField>
    <fullName>chargebeeapps__VAT_Number__c</fullName>
    <label>VAT Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>