force-app/main/default/objects/Account/fields/Child_Accounts_Enhancement_Amount__c.field-meta.xml
<CustomField>
    <fullName>Child_Accounts_Enhancement_Amount__c</fullName>
    <label>Child Accounts Enhancement Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>