force-app/main/default/objects/Account/fields/Churn_Reason_Description__c.field-meta.xml
<CustomField>
    <fullName>Churn_Reason_Description__c</fullName>
    <description>Reason why an account has churned</description>
    <label>Churn Reason Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>