force-app/main/default/objects/Account/fields/Churned_ARR__c.field-meta.xml
<CustomField>
    <fullName>Churned_ARR__c</fullName>
    <label>Churned ARR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>