force-app/main/default/objects/Account/fields/Completed_Training__c.field-meta.xml
<CustomField>
    <fullName>Completed_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed Training</label>
    <type>Checkbox</type>
</CustomField>