force-app/main/default/objects/Account/fields/Connector_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Connector_Licenses__c</fullName>
    <label>Connector Licenses</label>
    <summaryFilterItems>
        <field>License__c.Software_Module_Name__c</field>
        <operation>contains</operation>
        <value>Shopify,Magento</value>
    </summaryFilterItems>
    <summaryForeignKey>License__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>