force-app/main/default/objects/Account/fields/Created_By_At_Bat_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Created_By_At_Bat_Campaign__c</fullName>
    <formula>IF(  CreatedBy.FirstName  = &quot;Courtney&quot;  &amp;&amp; Name &lt;&gt; &quot;Mark&apos;s Plumbing Parts&quot;, Owner.Full_Name__c ,  IF( Name = &quot;Mark&apos;s Plumbing Parts&quot;, &quot;Ken Gauld&quot;, CreatedBy.Full_Name__c)      )</formula>
    <label>Created By At-Bat Campaign</label>
    <type>Text</type>
</CustomField>