force-app/main/default/objects/Account/fields/Current_Term_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Term_End_Date__c</fullName>
    <label>Current Term End Date</label>
    <summarizedField>chargebeeapps__CB_Subscription__c.chargebeeapps__Current_Term_End__c</summarizedField>
    <summaryForeignKey>chargebeeapps__CB_Subscription__c.chargebeeapps__Company__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>