force-app/main/default/objects/Account/fields/Current_Year_CY_ARR_Sales__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_CY_ARR_Sales__c</fullName>
    <label>Current Year (CY) ARR Sales</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>