force-app/main/default/objects/Account/fields/Customer_Billing_Method__c.field-meta.xml
<CustomField>
    <fullName>Customer_Billing_Method__c</fullName>
    <description>Determines how the customer is billed.</description>
    <label>Customer Billing Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>