force-app/main/default/objects/Account/fields/Customer_Class__c.field-meta.xml
<CustomField>
    <fullName>Customer_Class__c</fullName>
    <inlineHelpText>Original customer class - taken from ERP</inlineHelpText>
    <label>Customer Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>End User Cloud</fullName>
            </value>
            <value>
                <fullName>End User Desktop</fullName>
            </value>
            <value>
                <fullName>Ex end user Cloud</fullName>
            </value>
            <value>
                <fullName>Ex end user Desktop</fullName>
            </value>
            <value>
                <fullName>ISV</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Ex Partner</fullName>
            </value>
            <value>
                <fullName>National Partner</fullName>
            </value>
            <value>
                <fullName>Dead</fullName>
                <isActive>false</isActive>
                <label>Dead</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>