force-app/main/default/objects/Account/fields/DataCollection_Mobile__c.field-meta.xml
<CustomField>
    <fullName>DataCollection_Mobile__c</fullName>
    <label>DataCollection Mobile</label>
    <summaryFilterItems>
        <field>License__c.Software_Module_Name__c</field>
        <operation>equals</operation>
        <value>Mobile</value>
    </summaryFilterItems>
    <summaryForeignKey>License__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>