force-app/main/default/objects/Account/fields/DataCollection_WarehouseManagement__c.field-meta.xml
<CustomField>
    <fullName>DataCollection_WarehouseManagement__c</fullName>
    <label>DataCollection WarehouseManagement</label>
    <summaryFilterItems>
        <field>License__c.Software_Module_Name__c</field>
        <operation>equals</operation>
        <value>WarehouseManagement</value>
    </summaryFilterItems>
    <summaryForeignKey>License__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>