force-app/main/default/objects/Account/fields/Date_Became_Customer__c.field-meta.xml
<CustomField>
    <fullName>Date_Became_Customer__c</fullName>
    <label>Date Became Customer (First Time)</label>
    <type>Date</type>
</CustomField>