force-app/main/default/objects/Account/fields/Date_Became_Customer_Most_Recent__c.field-meta.xml
<CustomField>
    <fullName>Date_Became_Customer_Most_Recent__c</fullName>
    <label>Date Became Customer (Most Recent)</label>
    <type>Date</type>
</CustomField>