force-app/main/default/objects/Account/fields/Date_Became_Partner__c.field-meta.xml
<CustomField>
    <fullName>Date_Became_Partner__c</fullName>
    <label>Date Became Partner</label>
    <type>Date</type>
</CustomField>