force-app/main/default/objects/Account/fields/Date_of_Last_PA_Demo__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_PA_Demo__c</fullName>
    <label>Date of Last PA Demo</label>
    <type>Date</type>
</CustomField>