force-app/main/default/objects/Account/fields/Date_Renewal_at_Risk__c.field-meta.xml
<CustomField>
    <fullName>Date_Renewal_at_Risk__c</fullName>
    <label>Date Renewal at Risk</label>
    <type>Date</type>
</CustomField>