force-app/main/default/objects/Account/fields/Days_Since_Last_Human_Contact__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Human_Contact__c</fullName>
    <description>Number of days since the last qualifying EAC activity. Null when no activity has been recorded.</description>
    <formula>IF(ISBLANK(Last_Human_Contact__c), NULL, TODAY() - DATEVALUE(Last_Human_Contact__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Human Contact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>