force-app/main/default/objects/Account/fields/Delivery_Option__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Option__c</fullName>
    <label>Delivery Option</label>
    <length>255</length>
    <type>Text</type>
</CustomField>