force-app/main/default/objects/Account/fields/Demand_Planning__c.field-meta.xml
<CustomField>
    <fullName>Demand_Planning__c</fullName>
    <label>Demand Planning</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Demand_Planning</valueSetName>
    </valueSet>
</CustomField>