force-app/main/default/objects/Account/fields/Direct_Reason__c.field-meta.xml
<CustomField>
    <fullName>Direct_Reason__c</fullName>
    <inlineHelpText>Software. SalesPad selling software directly to end customers (with no margin to the VAR). 
Billing. SalesPad billing the end customer directly for software (with a margin “check” to the VAR). 
Services. SalesPad selling implementation services directly to end customers. 
Custom. SalesPad selling custom development services directly to end customers.</inlineHelpText>
    <label>Direct Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Software Subscription</fullName>
            </value>
            <value>
                <fullName>Software License</fullName>
            </value>
            <value>
                <fullName>Software Enhancements</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Custom Work (Partner)</fullName>
            </value>
            <value>
                <fullName>Custom Work (Customer)</fullName>
            </value>
            <value>
                <fullName>Custom Work (N/A)</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
                <isActive>false</isActive>
                <label>Billing</label>
            </value>
            <value>
                <fullName>Custom</fullName>
                <isActive>false</isActive>
                <label>Custom</label>
            </value>
            <value>
                <fullName>Services</fullName>
                <isActive>false</isActive>
                <label>Services</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>