force-app/main/default/objects/Account/fields/DirectReason__c.field-meta.xml
<CustomField>
    <fullName>DirectReason__c</fullName>
    <inlineHelpText>Where possible notes should include reason, date, approval person, and a link to the specific email.  It is understood that you will not always have all of this information for historical recordds.</inlineHelpText>
    <label>Direct Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>