force-app/main/default/objects/Account/fields/Distance_from_Atlanta__c.field-meta.xml
<CustomField>
    <fullName>Distance_from_Atlanta__c</fullName>
    <formula>(ABS(Latitude__c - 33.7490) * 69) + (ABS(Longitude__c - -84.3880) * 69)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distance_from_Atlanta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>