force-app/main/default/objects/Account/fields/Distance_from_Boston__c.field-meta.xml
<CustomField>
    <fullName>Distance_from_Boston__c</fullName>
    <formula>(ABS(Latitude__c - 42.3601) * 69) + (ABS(Longitude__c - -71.0589) * 69)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distance_from_Boston</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>