force-app/main/default/objects/Account/fields/Distance_from_Dallas__c.field-meta.xml
<CustomField>
    <fullName>Distance_from_Dallas__c</fullName>
    <formula>(ABS(Latitude__c - 32.7767) * 69) + (ABS(Longitude__c - -96.7970) * 69)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distance_from_Dallas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>