force-app/main/default/objects/Account/fields/Distance_from_Denver__c.field-meta.xml
<CustomField>
    <fullName>Distance_from_Denver__c</fullName>
    <formula>(ABS(Latitude__c - 39.7392) * 69) + (ABS(Longitude__c - -104.9903) * 69)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distance_from_Denver</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>