force-app/main/default/objects/Account/fields/Distance_from_Raleigh_Durham__c.field-meta.xml
<CustomField>
    <fullName>Distance_from_Raleigh_Durham__c</fullName>
    <formula>(ABS(Latitude__c - 35.9940) * 69) + (ABS(Longitude__c - -78.8986) * 69)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distance_from_Raleigh_Durham</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>