force-app/main/default/objects/Account/fields/Distance_from_Scottsdale__c.field-meta.xml
<CustomField>
    <fullName>Distance_from_Scottsdale__c</fullName>
    <formula>(ABS(Latitude__c - 33.4942) * 69) + (ABS(Longitude__c - -111.9261) * 69)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distance_from_Scottsdale</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>