force-app/main/default/objects/Account/fields/Distance_from_Tampa_c__c.field-meta.xml
<CustomField>
    <fullName>Distance_from_Tampa_c__c</fullName>
    <formula>(ABS(Latitude__c - 27.9506) * 69) + (ABS(Longitude__c - -82.4572) * 69)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distance_from_Tampa</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>