force-app/main/default/objects/Account/fields/Document_Management__c.field-meta.xml
<CustomField>
    <fullName>Document_Management__c</fullName>
    <label>Document Management</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kwiktag</fullName>
            </value>
            <value>
                <fullName>PaperSave</fullName>
            </value>
            <value>
                <fullName>DocStar</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>