force-app/main/default/objects/Account/fields/Duplicate__c.field-meta.xml
<CustomField>
    <fullName>Duplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Issue with James Duplicate records created on 2-25 or later</description>
    <label>Duplicate</label>
    <type>Checkbox</type>
</CustomField>