force-app/main/default/objects/Account/fields/eCommerce__c.field-meta.xml
<CustomField>
    <fullName>eCommerce__c</fullName>
    <label>eCommerce</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>eCommerce</valueSetName>
    </valueSet>
</CustomField>