force-app/main/default/objects/Account/fields/EDI__c.field-meta.xml
<CustomField>
    <fullName>EDI__c</fullName>
    <label>EDI</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EDI</valueSetName>
    </valueSet>
</CustomField>