force-app/main/default/objects/Account/fields/EDI_Documents__c.field-meta.xml
<CustomField>
    <fullName>EDI_Documents__c</fullName>
    <label>EDI Documents</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>850 - Purchase Order</fullName>
            </value>
            <value>
                <fullName>945 - Warehouse Shipping Order</fullName>
            </value>
            <value>
                <fullName>856 - Advance Ship Notice</fullName>
            </value>
            <value>
                <fullName>810 - Invoice</fullName>
            </value>
            <value>
                <fullName>855 - PO Acknowledgement</fullName>
            </value>
            <value>
                <fullName>846 - Inventory Inquiry/Advice</fullName>
            </value>
            <value>
                <fullName>940 - Warehouse Shipping Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>