force-app/main/default/objects/Account/fields/Enhancement_Amount__c.field-meta.xml
<CustomField>
    <fullName>Enhancement_Amount__c</fullName>
    <label>OLD_Enhancement ARR (Acct)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>