force-app/main/default/objects/Account/fields/Enhancement_ARR_Account_MFC__c.field-meta.xml
<CustomField>
    <fullName>Enhancement_ARR_Account_MFC__c</fullName>
    <formula>Chargebee_ARR_Enhancement_Acct__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enhancement ARR (Account)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>