force-app/main/default/objects/Account/fields/Enhancement_Date__c.field-meta.xml
<CustomField>
    <fullName>Enhancement_Date__c</fullName>
    <label>Enhancement Date</label>
    <type>Date</type>
</CustomField>