force-app/main/default/objects/Account/fields/Enhancement_Status__c.field-meta.xml
<CustomField>
    <fullName>Enhancement_Status__c</fullName>
    <label>Enhancement Status List</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Grace</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Churned</fullName>
            </value>
            <value>
                <fullName>Needs Attention</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>