force-app/main/default/objects/Account/fields/Enhancement_Status_Formula_Field__c.field-meta.xml
<CustomField>
    <fullName>Enhancement_Status_Formula_Field__c</fullName>
    <description>Checks for:
Current = Enhancement Date on the account is in the future
Grace = Up to 30 days past the Enhancement Date on the account
Expired = 31 days past the Enhancement Date on the account</description>
    <formula>IF(Enhancement_Date__c  &lt; today() -30,
   &apos;Expired&apos;
,
   IF(Enhancement_Date__c &lt; today(),
       &apos;Grace&apos;
   ,
     IF(Enhancement_Date__c &gt;=today(), 
      &apos;Current&apos;
,
&quot; &quot;
   )
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ARR/Enhancement Status</label>
    <type>Text</type>
</CustomField>