force-app/main/default/objects/Account/fields/ERP__c.field-meta.xml
<CustomField>
    <fullName>ERP__c</fullName>
    <label>ERP (Current)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ERP_Platform</valueSetName>
    </valueSet>
</CustomField>