force-app/main/default/objects/Account/fields/ERP_Future_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>ERP_Future_Time_Stamp__c</fullName>
    <label>ERP (Future) Time Stamp</label>
    <type>DateTime</type>
</CustomField>