force-app/main/default/objects/Account/fields/ERP_Legacy_Date__c.field-meta.xml
<CustomField>
    <fullName>ERP_Legacy_Date__c</fullName>
    <label>ERP (Legacy) Date</label>
    <type>Date</type>
</CustomField>