force-app/main/default/objects/Account/fields/ERP_Plan__c.field-meta.xml
<CustomField>
    <fullName>ERP_Plan__c</fullName>
    <label>ERP Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Plan to Change</fullName>
            </value>
            <value>
                <fullName>12-Month Plan to Change</fullName>
            </value>
            <value>
                <fullName>24-Month Plan to Change</fullName>
            </value>
            <value>
                <fullName>3- 5 year Plan to Change</fullName>
            </value>
            <value>
                <fullName>Already Switched ERP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>