force-app/main/default/objects/Account/fields/ERP_Plan_Notes__c.field-meta.xml
<CustomField>
    <fullName>ERP_Plan_Notes__c</fullName>
    <label>ERP Plan Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>