force-app/main/default/objects/Account/fields/ERP_Previous__c.field-meta.xml
<CustomField>
    <fullName>ERP_Previous__c</fullName>
    <label>ERP (Previous)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ERP_Platform</valueSetName>
    </valueSet>
</CustomField>