force-app/main/default/objects/Account/fields/ERP_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>ERP_Time_Stamp__c</fullName>
    <label>ERP (Current) Time Stamp</label>
    <type>DateTime</type>
</CustomField>