force-app/main/default/objects/Account/fields/Evaluation_Migration_Date__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Migration_Date__c</fullName>
    <inlineHelpText>Date company planned to start evaluations/migrations to new ERP.</inlineHelpText>
    <label>Evaluation/Migration Date</label>
    <type>Date</type>
</CustomField>