force-app/main/default/objects/Account/fields/Evaluation_Migration_Date_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Migration_Date_Time_Stamp__c</fullName>
    <label>Evaluation/Migration Date Time Stamp</label>
    <type>DateTime</type>
</CustomField>