force-app/main/default/objects/Account/fields/First_Purchase__c.field-meta.xml
<CustomField>
    <fullName>First_Purchase__c</fullName>
    <description>When we reset the Initial Purchase, then set the old value from the Initial Purchase to First Purchase.Initial P{urchase is what we use for New Logo Counts.</description>
    <label>First Purchase</label>
    <type>Date</type>
</CustomField>